# SGRenderDiligentEngine

./: .gitignore  CMakeLists.txt  README.md
Prototypes/: CMakeLists.txt
Prototypes/Common/Assets/Models/Bunny/: Bunny.gltf
Prototypes/Prototype01-GoochHighlighted/: CMakeLists.txt
Prototypes/Prototype01-GoochHighlighted/assets/: goochhighlighted.psh  goochhighlighted.vsh  structures.fxh
Prototypes/Prototype01-GoochHighlighted/src/: GoochHighlighted.cpp  GoochHighlighted.h
ThirdPartyIncludes/: ZLib.lib
